Fix navigation z-index and add round icons

--- a/src/components/icons/icons.less
+++ b/src/components/icons/icons.less
@@ -15,6 +15,7 @@
 
 .bss-icon.\+round {
 	visibility: hidden;
+	position: relative;
 }
 
 .bss-icon.\+round::after {
@@ -26,9 +27,9 @@
 	width: 32px;
 	color: white;
 	border-radius: 16px;
-	position:relative;
-	left:-28px;
-	top:6px;
+	position:absolute;
+	left:-4px;
+	top:-2px;
 	z-index:0;
 }
 
