--- a/src/components/navigation/navigation.less
+++ b/src/components/navigation/navigation.less
@@ -295,7 +295,7 @@
 	color: @dark-gray;
 	top: 0;
 	height:~'calc(100% - 4.8rem)';
-	z-index: 99;
+	z-index: 98;
 	border-right: .1rem solid @breakline-light;
 
 	&.\+tall-top {
